# Fuel-Tracking

./: .gitignore  README.md  data.example.csv  fuelAnalysis.ipynb  pyproject.toml
.github/workflows/: release.yml
src/fuel_tracking/: __init__.py  cli.py  io.py  report.py  stats.py  viz.py
